# relay-server

./: .gitignore  Cargo.toml
arduino/: arduino.ino
esp/: esp.ino
public/: index.html
rust-server/: Cargo.toml
rust-server/public/: index.html  style.css
rust-server/src/: filesystem.rs  server.rs
src/: controller.rs  filesystem.rs  main.rs  relayboard.rs  server.rs
