[package]
name = "relay-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
futures = "0.3.31"
local-ip-address = "0.6.5"
once_cell = "1.21.3"
reqwest = "0.12.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
